# x4-station-calc

./: .gitignore  AboutDialog.py  CHANGELOG  CMakeLists.txt  CheckUpdate.py  Common.py  DockWidget.py  Doxyfile  Faction.py  Factions.py  InfoWidget.py  InitLogger.py  LicenseDialog.py  MainWindow.py  ModuleInfo.py  ModuleInfoWidget.py  ModuleListWidget.py  Product.py  README.md  Station.py  StationModule.py  StringTable.py  WorkSpaceWidget.py  \  generate_resource.py  ize  main.pyw  pyversion.py  run.sh  test_qt.py  winpack.py
Common/: QSquareButton.py  __init__.py
InfoWidget/: InfoTreeWidget.py  __init__.py
ModuleListWidget/: ButtonBarWidget.py  FilterWidget.py  ModuleTreeWidget.py  __init__.py
WorkSpaceWidget/: ModuleGroupItem.py  ModuleItem.py  ModulesItem.py  Operations.py  SummaryItem.py  SummarysItem.py  __init__.py
WorkSpaceWidget/Operations/: AddModuleOperation.py  ChangeGroupNameOperation.py  ChangeModuleAmountOperation.py  NewGroupOperation.py  PasteOperation.py  RemoveOperation.py  SwapModuleOperation.py  __init__.py
data_scripts/: mkstation.py
factions/: argon.json  paranid.json  teladi.json
include/: common.h  config.h  global.h  open_file_listener.h  skin_manager.h  update_checker.h  version.h
include/common/: auto_release.h  compare.h  generic_reference.h  generic_string.h  multi_threading.h  types.h  xml_loader.h  xml_loader_context.h
include/design_model/: singleton.h
include/design_models/: singleton.h
include/game_data/: game_component.h  game_components.h  game_data.h  game_macros.h  game_races.h  game_station_modules.h  game_text.h  game_texts.h  game_vfs.h  game_wares.h
include/interface/: i_is_good.h  i_load_factory_func.h
include/interfaces/: i_clone_factory_func.h  i_clone_factory_func_unique.h  i_create_factory_func.h  i_create_factory_func_unique.h  i_initialized.h  i_is_good.h  i_load_factory_func.h  i_singleton.h
include/locale/: string_table.h
include/save/: save.h  save_group.h  save_groups_mime_data.h  save_module.h  save_modules_mime_data.h  save_version.h
include/ui/: about_dialog.h  check_update_dialog.h  game_path_dialog.h  language_setting_dialog.h  license_dialog.h  main_window.h  select_steam_id_dialog.h
modules/factory/: advanced_composite_production.json  advanced_electronics_production.json  antimatter_cell_production.json  antimatter_converter_production.json  argon_medical_supply_production.json  claytronics_production.json  drone_component_production.json  energy_cell_production.json  engine_part_production.json  field_coil_production.json  food_ration_production.json  graphene_production.json  hull_part_production.json  maja_dust_production.json  maja_snail_production.json  meat_production.json  microchip_production.json  missile_component_production.json  nostrop_oil_production.json  paranid_medical_supply_production.json  plasma_conductor_production.json  quantum_tube_production.json  refined_metal_production.json  scanning_array_production.json  shield_component_production.json  silicon_wafer_production.json  smart_chip_production.json  soja_bean_production.json  soja_husk_production.json  spacefuel_production.json  spaceweed_production.json  spice_production.json  sunrise_flower_production.json  superfluid_coolant_production.json  swamp_plant_production.json  teladi_advanced_composite_production.json  teladi_engine_part_production.json  teladi_hull_part_production.json  teladi_medical_supply_production.json  teladi_scanning_array_production.json  (+5 more)
products/: advanced_composites.json  advanced_electronics.json  antimatter_cells.json  antimatter_converters.json  claytronics.json  drone_components.json  energy_cell.json  energy_cells.json  engine_parts.json  field_coils.json  flares.json  food_rations.json  graphene.json  helium.json  hull_parts.json  hydrogen.json  ice.json  maja_dust.json  maja_snails.json  meat.json  medical_supplies.json  methane.json  microchips.json  missile_components.json  nividium.json  nostrop_oil.json  ore.json  plasma_conductors.json  quantum_tubes.json  refined_metals.json  scanning_arrays.json  shield_components.json  silicon.json  silicon_wafers.json  smart_chips.json  soja_beans.json  soja_husk.json  spacefuel.json  spaceweed.json  spices.json  (+9 more)
resource/: resources.qrc  winicon.rc
resource/HTML/: template.html
resource/License/: egosoft  gplv3  head  lgplv3  license.en_US  license.zh_CN  license.zh_TW  tail
resource/Save/: id_map_0.x.x.json
resource/Skins/: default
resource/StringTable/: StringTable.json  about_dialog.json  common.json  editor.json  editor_warnings.json  game_load.json  game_path_dialog.json  info_widget.json  language_setting_dialog.json  license_dialog.json  main_window.json  new_factory_wizard.json  save.json  select_steam_id_dialog.json  station_module_widget.json  update.json
resource/StyleSheet/: editor_warning.qss  transparent_label.qss  ware_button.qss
source/: config.cc  crash_handler.cc  global.cc  main.cc  open_file_listener.cc  skin_manager.cc  update_checker.cc
source/common/: xml_loader.cc  xml_loader_context.cc
source/game_data/: game_component.cc  game_components.cc  game_data.cc  game_macro.cc  game_macros.cc  game_races.cc  game_station_modules.cc  game_text.cc  game_texts.cc  game_vfs.cc  game_wares.cc
source/interface/: i_is_good.cc
source/interfaces/: i_initialized.cc  i_is_good.cc
source/locale/: string_table.cc
source/save/: save.cc  save_group.cc  save_groups_mime_data.cc  save_module.cc  save_modules_mime_data.cc  save_version.cc
source/ui/: about_dialog.cc  game_path_dialog.cc  language_setting_dialog.cc  license_dialog.cc  main_window.cc  select_steam_id_dialog.cc  title_bar.cc
station_modules/defence/: argon_administrative_centre.json  argon_bridge_defence_platform.json  argon_disc_defence_platform.json  en.txt  paranid_administrative_centre.json  paranid_bridge_defence_platform.json  paranid_disc_defence_platform.json  teladi_administrative_centre.json  teladi_bridge_defence_platform.json  teladi_disc_defence_platform.json  zh.txt
station_modules/dock/: 1m6s_basic_dock_area.json  en.txt  zh.txt  (+14 more)
(+255 files in other folders)
